Adds integration tests for locker API

--- a/ParcelBox.Api.Tests/ParcelBox.Api.Tests.csproj
+++ b/ParcelBox.Api.Tests/ParcelBox.Api.Tests.csproj
@@ -19,4 +19,8 @@
         <Using Include="Xunit"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ParcelBox.Api\ParcelBox.Api.csproj" />
+    </ItemGroup>
+
 </Project>
