--- a/ParcelBox.Api/ParcelBox.Api.csproj
+++ b/ParcelBox.Api/ParcelBox.Api.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="FluentValidation" Version="12.1.1" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.0" />
     </ItemGroup>
 
 </Project>
