--- a/ParcelBox.Api/appsettings.json
+++ b/ParcelBox.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=employees.db"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=parcelbox_db;Username=postgres;Password=[CHANGE_PASSWORD]"
   }
 }
