Replace build step with publish step in workflow

--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore ParcelBox.Api/ParcelBox.Api.csproj
 
-      - name: Build project
-        run: dotnet build ParcelBox.Api/ParcelBox.Api.csproj --configuration Release --no-restore --output ./build-output
+      - name: Publish project
+        run: dotnet publish ParcelBox.Api/ParcelBox.Api.csproj --configuration Release --no-restore --output ./build-output
 
       - name: Install Swagger CLI
         run: dotnet tool install --global Swashbuckle.AspNetCore.Cli
