--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -28,7 +28,7 @@ jobs:
         run: dotnet publish ParcelBox.Api/ParcelBox.Api.csproj --configuration Release --no-restore --output ./build-output
 
       - name: Install Swagger CLI
-        run: dotnet tool install --global Swashbuckle.AspNetCore.Cli
+        run: dotnet tool install --global Swashbuckle.AspNetCore.Cli --version 10.1.0
 
       - name: Generate Swagger JSON
         run: swagger tofile --output swagger.json ./build-output/ParcelBox.Api.dll v1
